<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatriceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:translationY="100sp">

            <TextView
                android:id="@+id/textViewRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rightAnswers"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textViewWrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wrongAnswers"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textViewPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ratio"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMiniGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Retour au mini-jeu" />

            <Button
                android:id="@+id/buttonMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Retour au Menu" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>